--- a/templates/alumno/ver_asignaturas.html.twig
+++ b/templates/alumno/ver_asignaturas.html.twig
@@ -1,4 +1,3 @@
 {% for asignatura in asignaturas %}
-        {{ asignatura.id}}
-        {{ asignatura.nombre}}
+    {{ asignatura.id }} - {{ asignatura.nombre }}
 {% endfor %}
